trunk/Archive2/40/accf6076314f0d/output
main.cpp: In member function 'void A::g() const':
main.cpp:5:24: error: no matching function for call to 'A::f() const'
     void g() const { f(); }
                        ^
main.cpp:5:24: note: candidate is:
main.cpp:4:10: note: void A::f() <near match>
     void f() { } ;
          ^
main.cpp:4:10: note:   no known conversion for implicit 'this' parameter from 'const A* const' to 'A*'
